# ninja-taisen

./: .gitignore  CLAUDE.md  README.md  dev.py  dev_requirements.txt  pyproject.toml
.github/workflows/: python-package.yaml
analysis/: batch_simulate.py  play_all_strategies.py  short_simulate.py  single_game.py  speed_benchmark.py
analysis/ninja-taisen-20240828_192434/: heuristic_analysis.ipynb  metric_count.csv  metric_position.csv  metric_strength.csv  random.csv  random_spot_win.csv  results.parquet
analysis/ninja-taisen-20240902_065302/: heuristic_analysis.ipynb  metric_count.csv  metric_position.csv  metric_strength.csv  random.csv  random_spot_win.csv  results.parquet
analysis/ninja-taisen-20240916_103108/: log_20240916_103108.txt
analysis/ninja-taisen-20240916_103108/chunk_results/: results_100-199.parquet
analysis/ninja-taisen-20240916_104134/: log_20240916_104134.txt  metric_strength.csv  random.csv  results.parquet
analysis/ninja-taisen-20240916_104134/chunk_results/: results_0-99.parquet  results_100-199.parquet  results_1000-1099.parquet  results_10000-10099.parquet  results_10100-10199.parquet  results_10200-10299.parquet  results_10300-10399.parquet  (+243 more)
analysis/ninja-taisen-20240918_121113/: log_20240918_121113.txt
analysis/ninja-taisen-20240919_121254/: log_20240919_121254.txt
analysis/ninja-taisen-20240919_122303/: log_20240919_122303.txt
analysis/ninja-taisen-20240919_122804/: log_20240919_122804.txt  results.csv
analysis/ninja-taisen-20241113_094133/: comparison.csv  log_20241113_094133.txt  metric_count.csv  metric_strength.csv  random.csv  random_spot_win.csv  results.parquet
analysis/ninja-taisen-20241113_101012/: comparison.csv  log_20241113_101012.txt  metric_count.csv  metric_strength.csv  random.csv  random_spot_win.csv  results.parquet
ninja_taisen/: api_entrypoint.py
ninja_taisen/algos/: game_runner.py
ninja_taisen/objects/: cards.py  constants.py  types.py
ninja_taisen/strategy/: strategy_impl.py  strategy_lookup.py
ninja_taisen/utils/: logging_setup.py  run_directory.py
ninja_taisen_rust/: Cargo.toml
ninja_taisen_rust/src/: battle.rs  board.rs  card.rs  dice.rs  dto.rs  lib.rs  metric.rs  move_gatherer.rs  simulator.rs  strategy.rs
ninja_taisen_rust/src/board/: card.rs  dice.rs  dto.rs
ninja_taisen_rust/tests/: test_lib.rs
py/: dev.py  dev_requirements.txt  pyproject.toml
py/ninja_taisen/: api.py
py/src/ninja_taisen/: dtos.py
py/src/ninja_taisen/algos/: board_inspector.py
py/tests/: test_api_rust.py  test_flask_entrypoint.py
py/tests/algos/: test_card_battle.py
py/tests/regression/batch_simulation/: results.csv
py/tests/regression/dto_json/: README.md  choose_request.json
py/tests/regression/slow_simulation/: results.csv
py/tests/regression/turn_by_turn/: test_turn_by_turn.py
py/tests/regression/turn_by_turn/metric_count_vs_metric_strength/: request_11.json  request_5.json  request_6.json  response_11.json  results.csv
py/tests/regression/turn_by_turn/metric_count_vs_random/: request_8.json  request_9.json
py/tests/regression/turn_by_turn/metric_count_vs_random_spot_win/: final_board.json  request_11.json  request_3.json  request_4.json  request_6.json  response_3.json  results.csv
py/tests/regression/turn_by_turn/metric_strength_vs_metric_count/: request_6.json  request_7.json  request_8.json  response_5.json  response_6.json  results.csv
py/tests/regression/turn_by_turn/metric_strength_vs_metric_strength/: final_board.json  request_3.json  request_8.json  request_9.json
py/tests/regression/turn_by_turn/metric_strength_vs_random/: request_8.json
py/tests/regression/turn_by_turn/next_turn_prototype_vs_metric_count/: final_board.json  request_14.json  request_3.json  request_4.json  request_6.json  request_8.json  response_0.json  response_11.json  response_15.json  response_9.json  results.csv
py/tests/regression/turn_by_turn/random_spot_win_vs_metric_count/: request_2.json
py/tests/regression/turn_by_turn/random_spot_win_vs_metric_strength/: request_2.json  request_5.json  response_7.json  response_8.json
py/tests/regression/turn_by_turn/random_spot_win_vs_random/: final_board.json  request_6.json  response_4.json  results.csv
py/tests/regression/turn_by_turn/random_spot_win_vs_random_spot_win/: request_4.json
py/tests/regression/turn_by_turn/random_vs_metric_count/: request_4.json  request_6.json  response_4.json  response_5.json  results.csv
py/tests/regression/turn_by_turn/random_vs_metric_strength/: final_board.json  request_3.json  request_4.json  request_7.json  request_8.json  response_5.json  response_9.json
py/tests/regression/turn_by_turn/random_vs_next_turn_prototype/: final_board.json  request_3.json  response_2.json
py/tests/regression/turn_by_turn/random_vs_random/: request_11.json  response_15.json  results.csv
py/tests/regression/turn_by_turn/random_vs_random_spot_win/: response_10.json  response_13.json  response_8.json
rs/: Cargo.toml
rs/src/: dto.rs  lib.rs
rust/: Cargo.toml
rust/src/: dto.rs  lib.rs
scripts/: Playground.ipynb  flask_entrypoint.py  play_all_strategies.py  play_all_strategies_20240816_230028.csv  play_all_strategies_20240818_161837.csv  play_single_move.py
scripts/ninja-taisen-20240828_192434/: heuristic_analysis.ipynb  log.txt  win_counts.csv
src/: lib.rs  move_gatherer.rs  strategy.rs
src/ninja_taisen/: __init__.py  __main__.py  api.py  dtos.py  flask_entrypoint.py  logging_setup.py  public_types.py
tests/: conftest.py  test_api.py  test_api_entrypoint.py  test_api_execute_move.py  test_end_to_end.py  test_flask_entrypoint.py  test_results_serialisation.py
tests/algos/: test_board_builder.py  test_card_battle.py  test_card_mover.py
tests/json_serialisation/: test_serialisation_regression.py
tests/objects/: test_board.py  test_card.py  test_dice.py
tests/regression/: board.json  expected_board.json  expected_results.csv  move_request_body.json  move_response_body.json  test_board_json.py  test_regression.py  test_simulation.py
tests/regression_batch_simulation/: test_batch_simulation.py
(+495 files in other folders)
