[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ninja-taisen"
dynamic = ["version"]
description = 'ninja-taisen board game - simulation and strategies'
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Luke Chapman", email = "lrrchapman@gmail.com" },
]
dependencies = [
  "flask>=3.0.3",
  "matplotlib>=3.9.2",
  "more-itertools>=10.4",
  "polars>=1.5.0",
  "pydantic>=2.8.2",
]

[project.urls]
Documentation = "https://github.com/luke-chapman/ninja-taisen#readme"
Issues = "https://github.com/luke-chapman/ninja-taisen/issues"
Source = "https://github.com/luke-chapman/ninja-taisen"

[tool.maturin]
python-source = "py"

[tool.ruff]
lint.select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
line-length = 120
target-version = "py312"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
