[build-system]
requires = ["maturin>=1.12.6,<2.0"]
build-backend = "maturin"

[project]
name = "ninja-taisen"
dynamic = ["version"]
description = 'ninja-taisen board game - simulation and strategies'
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Luke Chapman", email = "lrrchapman@gmail.com" },
]
dependencies = [
  "fastapi[standard]>=0.115.0",
  "matplotlib>=3.10.8",
  "more-itertools>=10.8.0",
  "polars>=1.39.2",
  "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
  "black>=26.3.1",
  "maturin>=1.12.6,<2.0",
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "requests>=2.32.5",
  "ruff>=0.15.6",
  "types-psutil>=7.2.2.20260130",
  "types-requests>=2.32.4.20260107",
]

[project.urls]
Documentation = "https://github.com/luke-chapman/ninja-taisen#readme"
Issues = "https://github.com/luke-chapman/ninja-taisen/issues"
Source = "https://github.com/luke-chapman/ninja-taisen"

[tool.ruff]
lint.select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
line-length = 120
target-version = "py314"

[tool.black]
line-length = 120
target-version = ["py314"]

[tool.mypy]
python_version = "3.14"
