[package]
name = "ninja_taisen_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = ">=0.4"
env_logger = ">=0.10"
log = ">=0.4"
ordered-float = ">=4.4.0"
polars = { version = ">=0.43", features = ["parquet", "dtype-u8", "lazy"] }
rand = ">=0.8"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0"
tempfile = ">=3.12"
threadpool = ">=1.8.1"
